Wallet USS: clear data on signout

Make sure the USS implementation also clears data on signout, just like
the directory-based implementation does. This also enables an
integration test to test this in the butter scenario.

Also making a small fix: Updating the storage in PDM in
OnSyncInitialized, because if sync is disabled, we won't get the
OnStateChanged call.

Bug: 880735
Change-Id: I6aa49b8c459a48cb92a1e3d7283f05eed8e6eb5c
Reviewed-on: https://chromium-review.googlesource.com/1206490
Commit-Queue: Florian Uunk <feuunk@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589197}
Former-commit-id: 18686a4655c7c0640fbed731decd392fabf14832