components/autofill/core/browser/webdata/autofill_wallet_sync_bridge.h
@@ -63,6 +63,9 @@ class AutofillWalletSyncBridge : public base::SupportsUserData::Data,
   std::string GetClientTag(const syncer::EntityData& entity_data) override;
   std::string GetStorageKey(const syncer::EntityData& entity_data) override;
   bool SupportsIncrementalUpdates() const override;
+  StopSyncResponse ApplyStopSyncChanges(
+      std::unique_ptr<syncer::MetadataChangeList> delete_metadata_change_list)
+      override;
 
  private:
   struct AutofillWalletDiff {
